--- a/.github/workflows/mkdocs-deploy.yml
+++ b/.github/workflows/mkdocs-deploy.yml
@@ -39,5 +39,5 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 sync site/ s3://my-docs-bucket --delete
+          aws s3 sync site/ s3://my-website-doc --delete
     
